[package]
name = "rdma"
version = "0.1.0"
edition = "2021"
links = "libibverbs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.70"

[dependencies]
phoenix-api = { git = "https://github.com/phoenix-dataplane/phoenix-api", tag = "v0.1.0", optional = true }
mmap = { git = "https://github.com/phoenix-dataplane/mmap-rs", tag = "v0.1.0", optional = true }

thiserror = "1.0.29"
log = "0.4.14"
libc = "0.2.103"
static_assertions = "1.1.0"
socket2 = "0.4.7"
memfd = "0.4.1"
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
spin = { version = "0.9.3", optional = true }
lazy_static = { version = "1.4.0", optional = true }
nix = { version = "0.25.0", default-features = false, features = ["socket", "net"] }

[features]
phoenix = ["dep:phoenix-api", "dep:serde", "dep:bincode", "dep:mmap", "dep:spin", "dep:lazy_static"]
